k8s/db.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: petclinic
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: mysql:9.6
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          livenessProbe:
            tcpSocket:
              port: mysql
          readinessProbe:
            tcpSocket:
              port: mysql
          startupProbe:
            tcpSocket:
              port: mysql
