k8s/db.svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql-service
  name: mysql-service
  namespace: petclinic
spec:
  ports:
  - name: 3306-3306
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
  type: ClusterIP
status:
  loadBalancer: {}
