k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic
  namespace: petclinic
spec:
  rules:
  - host: petclinic.local
    http:
      paths:
      - backend:
          service:
            name: petclinic-service
            port:
              number: 8080
        path: /
        pathType: Exact
status:
  loadBalancer: {}
